--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "barryvdh/laravel-cors": "^0.11.0",
         "barryvdh/laravel-elfinder": "^0.4.0",
         "fideloper/proxy": "^4.0",
+        "jenssegers/date": "^3.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0"
     },
@@ -30,7 +31,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
