--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "artesaos/seotools": "^0.12.0",
         "backpack/crud": "^3.4",
         "backpack/logmanager": "^2.3",
         "barryvdh/laravel-cors": "^0.11.0",
